adjusted the width of the form to ensure the summary could sit next to the form without being squashed

--- a/style/components/individual-components/checkout-page/_form.scss
+++ b/style/components/individual-components/checkout-page/_form.scss
@@ -7,12 +7,16 @@ form {
     padding-bottom: 10px;
 
     @include tablet{
-        max-width: 689px;
+        max-width: 500px;
         margin: -10px 0 0 50px;
         padding: 10px 15px;
     }
 
     @include desktop{
+        max-width: 600px;
+    }
+
+    @include desktop-large{
         max-width: 730px;
     }
 
@@ -382,5 +386,18 @@ form {
                 }
             }
         }
+    }
+}
+
+
+.body-flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    @include desktop {
+        flex-direction: row;
+        align-items: flex-start;
     }
 }
